--- a/scss/_tech-stack-section.scss
+++ b/scss/_tech-stack-section.scss
@@ -1,5 +1,6 @@
 .tech-stack {
   .slick-list {
+    width: 100%;
     margin: 20px 0 !important;
   }
 
